--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -596,16 +596,7 @@
         </dependency>
     </dependencies>
     <build>
-    	<!--  for server side i18n -->
-    	<resources>
-    		<resource>
-    			<directory>src/main/java/ch/unibas/medizin/osce/shared/i18n</directory>
-    			<targetPath>ch/unibas/medizin/osce/shared/i18n</targetPath>
-    			<includes>
-    				<include>*.properties</include>
-    			</includes>
-    		</resource>
-    	</resources>
+    	
          <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -785,10 +776,10 @@
                 <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/OsMaEntry.html</runTarget>
+                    <runTarget>/ApplicationScaffold.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.OsMaEntry</module>
+                        <module>${project.groupId}.ApplicationScaffold</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
                 </configuration>
