--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -799,11 +799,10 @@
                 <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <!-- <runTarget>/OsMaEntry.html</runTarget> -->
-                    <runTarget>/ApplicationScaffold.html</runTarget>
+                    <runTarget>/OsMaEntry.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.ApplicationScaffold</module>
+                        <module>${project.groupId}.OsMaEntry</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
                 </configuration>
