--- a/OsceManager/pom.xml
+++ b/OsceManager/pom.xml
@@ -619,10 +619,7 @@
         </dependency>
     </dependencies>
     <build>
-<<<<<<< Updated upstream
-    	
-=======
->>>>>>> Stashed changes
+
          <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -802,18 +799,15 @@
                 <configuration>
                     <logLevel>INFO</logLevel>
                     <style>PRETTY</style>
-                    <runTarget>/OsMaEntry.html</runTarget>
+                    <runTarget>/ApplicationScaffold.html</runTarget>
                     <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                     <modules>
-                        <module>${project.groupId}.OsMaEntry</module>
+                        <module>${project.groupId}.ApplicationScaffold</module>
                     </modules>
                     <copyWebapp>true</copyWebapp>
                 </configuration>
                 <executions>
                     <execution>
-                    	<configuration>
-                    		<extraJvmArgs>-Xmx12g</extraJvmArgs>
-                    	</configuration>
                         <id>gwtcompile</id>
                         <phase>prepare-package</phase>
                         <goals>
