--- a/OsceManager/src/main/webapp/WEB-INF/web.xml
+++ b/OsceManager/src/main/webapp/WEB-INF/web.xml
@@ -50,10 +50,12 @@
     </filter>
     
     <!-- For Authorization -->
+    <!-- Uncomment for production mode 
     <filter>
 		<filter-name>AuthenticationFilter</filter-name>		
 		<filter-class>ch.unibas.medizin.osce.server.util.AuthenticationFilter</filter-class>
 	</filter>
+	-->
 	
     <filter-mapping>
         <filter-name>CharacterEncodingFilter</filter-name>
@@ -70,16 +72,18 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     
+    <!-- Uncomment for production mode 
     <filter-mapping>
 		<filter-name>AuthenticationFilter</filter-name>
 		<url-pattern>/*.html</url-pattern>
 	</filter-mapping>
 	
+	
 	<filter-mapping>
 		<filter-name>AuthenticationFilter</filter-name>
 		<url-pattern>/gwtRequest</url-pattern>
 	</filter-mapping>
-	
+	-->
     
     <!-- Creates the Spring Container shared by all Servlets and Filters -->
     <listener>
