--- a/OsceManager/src/main/webapp/WEB-INF/web.xml
+++ b/OsceManager/src/main/webapp/WEB-INF/web.xml
@@ -287,7 +287,6 @@
 		<servlet-name>summonings</servlet-name>
 		<url-pattern>/osMaEntry/summonings</url-pattern>
 	</servlet-mapping>
-	
 	<servlet>
 		<servlet-name>downloadRoleFile</servlet-name>
         <servlet-class>ch.unibas.medizin.osce.server.upload.DownloadRoleFileServlet</servlet-class>
@@ -306,6 +305,15 @@
 	<servlet-mapping>
 		<servlet-name>resourceDownloaderServlet</servlet-name>
 		<url-pattern>/downloadFile</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>downloadExportOsceFile</servlet-name>
+        <servlet-class>ch.unibas.medizin.osce.server.upload.DownloadExportOsceFileServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>downloadExportOsceFile</servlet-name>
+		<url-pattern>/downloadExportOsceFile</url-pattern>
 	</servlet-mapping>
  
 </web-app>
